--- a/less/styles.less
+++ b/less/styles.less
@@ -968,7 +968,7 @@ input.qtyminus{
 .item-info__layout{
   position: relative;
   margin: 0 0 25px;
-  font-family: @fontBReg;
+  font-family: @fontBReg; /*определение шрифта для всего блока*/
 
   b{
     font-family: @fontBBold;
