--- a/css/styles.css
+++ b/css/styles.css
@@ -665,8 +665,8 @@ input.qtyminus {
 }
 .circle-image__wrap img {
   display: block;
-  max-height: 100%;
-  max-width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 .review__item-text {
   width: 670px;
