--- a/less/styles.less
+++ b/less/styles.less
@@ -757,8 +757,8 @@ input.qtyminus{
   height: 163px;
   img{
     display: block;
-    max-height: 100%;
-    max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
   }
 }
 
