--- a/less/styles.less
+++ b/less/styles.less
@@ -513,11 +513,13 @@ p{
   display: block;
   width: 100%;
   height: 196px;
+  line-height: 196px;
   overflow: hidden;
   margin-bottom: 8px;
-
+  text-align: center;
   img{
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     max-width: 100%;
     max-height: 100%;
   }
@@ -1009,6 +1011,7 @@ input.qtyminus{
   display: block;
   width: 395px;
   height: 274px;
+  line-height: 250px;
   background: #fff;
   padding: 12px;
   -webkit-box-shadow: 0 2px 6px rgba(18, 17, 12, 0.2);
@@ -1018,12 +1021,12 @@ input.qtyminus{
   position: absolute;
   left: 0;
   right: 0;
+  text-align: center;
   img{
-    display: block;
-    width: 100%;
+    display: inline-block;
+    vertical-align: middle;
     max-width: 100%;
     max-height: 100%;
-    height: 250px;
   }
 }
 
