--- a/css/styles.css
+++ b/css/styles.css
@@ -419,6 +419,19 @@ p {
   -webkit-box-shadow: 0 2px 6px rgba(18, 17, 12, 0.2);
   box-shadow: 0 2px 6px rgba(18, 17, 12, 0.2);
 }
+.catalog__item--top-weigth {
+  padding-top: 32px;
+  position: relative;
+}
+.catalog__item-weight {
+  position: absolute;
+  top: 0;
+  right: 12px;
+  font: 14px/32px 'LatoWebMedium', sans-serif;
+}
+.catalog__item-weight span {
+  font-family: 'LatoWebBold', sans-serif;
+}
 .catalog__item-image {
   display: block;
   width: 100%;
