--- a/less/styles.less
+++ b/less/styles.less
@@ -509,6 +509,22 @@ p{
   box-shadow: 0 2px 6px rgba(18, 17, 12, 0.2);
 }
 
+.catalog__item--top-weigth{
+  padding-top: 32px;
+  position: relative;
+}
+
+.catalog__item-weight{
+  position: absolute;
+  top: 0;
+  right: 12px;
+  font: 14px/32px @fontMed;
+
+  span{
+    font-family: @fontBold;
+  }
+}
+
 .catalog__item-image{
   display: block;
   width: 100%;
