--- a/less/styles.less
+++ b/less/styles.less
@@ -2364,3 +2364,7 @@ div.jfilestyle .count-jfilestyle {
   text-transform: uppercase;
   margin: 0 0 8px;
 }
+
+.mfp-bg.basket-informer-overlay{
+  background: transparent!important;
+}
