--- a/css/styles.css
+++ b/css/styles.css
@@ -2096,7 +2096,7 @@ div.jfilestyle .count-jfilestyle {
   position: relative;
   width: 660px;
   height: 660px;
-  margin: 20px auto;
+  margin: 20px auto 50px;
 }
 .pizza-slice {
   position: relative;
@@ -2135,7 +2135,7 @@ div.jfilestyle .count-jfilestyle {
 }
 .pizza-slice-item--1 .pizza-slice-item__dropbox {
   top: 230px;
-  left: -90px;
+  left: -145px;
 }
 .pizza-slice-item--1 .pizza-slice__ingredient--4 {
   bottom: 65px;
