--- a/less/styles.less
+++ b/less/styles.less
@@ -2373,7 +2373,7 @@ div.jfilestyle .count-jfilestyle {
   position: relative;
   width: 660px;
   height: 660px;
-  margin: 20px auto;
+  margin: 20px auto 50px;
 }
 
 .pizza-slice{
@@ -2419,7 +2419,7 @@ div.jfilestyle .count-jfilestyle {
 
   .pizza-slice-item__dropbox{
     top: 230px;
-    left: -90px;
+    left: -145px;
   }
 
   .pizza-slice__ingredient--4{
