--- a/css/styles.css
+++ b/css/styles.css
@@ -2114,8 +2114,8 @@ div.jfilestyle .count-jfilestyle {
 .pizza-slice__ingredient img {
   display: block;
   margin: 0 auto;
-  max-height: 100%;
-  max-width: 100%;
+  /* max-height: 100%;
+  max-width: 100%; */
 }
 .pizza-slice-item--1 {
   position: absolute;
