--- a/less/styles.less
+++ b/less/styles.less
@@ -1446,8 +1446,8 @@ input[type="radio"]:checked:disabled + label::before {
 
 .menu-nav__col{
   float: left;
-  width: 25%;
-  margin: 0;
+  width: 20%;
+  margin: 0; 
   padding-right: 15px;
   &:last-child{ 
     padding-right: 0;
@@ -1466,21 +1466,22 @@ input[type="radio"]:checked:disabled + label::before {
     display: block;
     position: absolute;
     left: 0;
-    bottom: -17px;
-    max-width: 150px;
-    min-width: 100px;
-    min-height: 60px;
-    max-height: 85px;
+    bottom: -13px;
+    max-width: 85px;
+    min-width: 70px;
+    min-height: 55px;
+    max-height: 60px;
     z-index: 10;
   }
   span{
+    margin-left: 60px;
     display: inline-block;
     margin: 0;
     background: #6e331b;
     color: #fff;
     text-decoration: underline;
-    font: 14px/34px @fontBReg;
-    padding: 0 35px;
+    font: 13px/34px @fontBReg;
+    padding: 0 22px;
     height: 34px;
     text-align: right;
     position: relative;
@@ -1513,6 +1514,61 @@ input[type="radio"]:checked:disabled + label::before {
     }
   }
 
+}
+
+.menu-nav__col:first-child,
+.menu-nav__col:nth-child(2){
+  width: 175px!important;
+
+  .menu-nav__item img{
+    width: 85px;
+  }
+
+  .menu-nav__item span{
+    padding-left: 35px;
+  }
+}
+
+.menu-nav__col:nth-child(3){
+  width: 175px!important;
+
+  .menu-nav__item img{
+    width: 75px;
+  }
+}
+
+.menu-nav__col:nth-child(4){
+  width: 220px!important;
+
+  .menu-nav__item img{
+    width: 85px;
+  }
+}
+
+.menu-nav__col:last-child{
+  width: 225px!important;
+
+  .menu-nav__item img{
+    width: 75px;
+  }
+}
+
+.menu-nav__item.new{
+  &:after{
+    content: "NEW!";
+    display: block;
+    background: #db0a0a;
+    color: #fff;
+    border-radius: 13px;
+    width: 35px;
+    height: 25px;
+    text-align: center;
+    position: absolute;
+    top: -20px;
+    left: 55px;
+    z-index: 33;
+    font: 10px/25px @fontBReg;
+  }
 }
 
 .basket-widget__layout {
