--- a/less/styles.less
+++ b/less/styles.less
@@ -2450,8 +2450,8 @@ div.jfilestyle .count-jfilestyle {
   img{
     display: block;
     margin: 0 auto;
-    max-height: 100%;
-    max-width: 100%;
+    // max-height: 100%;
+    // max-width: 100%;
   }
 }
 
